# Agentic-Hemisphere-Kubernetes

./: .cursorrules  .gitignore  CHROME_INSTRUCTIONS.md  Jenkinsfile  LICENSE  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.cursor/plans/: handshake_benchmark-optimize-007.json  handshake_k8s-containers-002.json  handshake_k8s-infra-001.json  handshake_k8s-scaffold-000.json  signal_benchmark-optimize-007_approve.json  signal_k8s-scaffold-000_approve.json  workspace_state.json
.cursor/rules/: 01_master_rh.mdc  02_emissary_lh.mdc  03_callosum.mdc  04_security.mdc
.github/workflows/: ci.yml
docker/lh-executor/: Dockerfile  requirements.txt
docker/rh-planner/: Dockerfile  requirements.txt
docker/rh-sidecar/: Dockerfile  requirements.txt
docs/: cost-benchmark-analysis.md  gcp-setup-walkthrough.md  pos-benchmark-analysis.md
k8s/base/: kustomization.yaml  network-policies.yaml  operator-deployment.yaml  resource-quotas.yaml  rh-deployment.yaml  rh-service.yaml
operator/: Dockerfile  __init__.py  operator.py  requirements.txt
operator/config/: rbac.yaml
operator/crds/: agenttask_crd.yaml
operator/templates/: lh_pod_template.yaml
scripts/: benchmark.py  configure.sh  cost_benchmark.py  deploy.sh  pos_benchmark.py  setup.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/tests/: terraform_test.py
tests/: conftest.py  test_cost_tracker.py  test_integration.py  test_lh_executor.py  test_operator.py  test_rh_planner.py  test_sidecar.py
tests/benchmarks/: test_cost.py  test_deployment_ease.py  (+2 more)
(+37 files in other folders)
